# Logic

./: .gitignore  CMakeLists.txt  Makefile  ProofMain.cpp  SampleInput.txt  SampleLemmaProof.txt  TestMain.cpp  builder  readme.md  readme.txt  rules.xml  ubuntu_verifier  verifier
Justifications/: AggregateJustification.cpp  AggregateJustification.hpp  CMakeLists.txt  EquivalenceRules.cpp  EquivalenceRules.hpp  InferenceRules.cpp  InferenceRules.hpp  Justification.cpp  Justification.hpp
Proof/: BuiltInRules.cpp  BuiltInRules.hpp  CMakeLists.txt  Proof.cpp  Proof.hpp  ProofMain.cpp  ProofReader.cpp  ProofReader.hpp  ProofRules.cpp  ProofRules.hpp
Statements/: CMakeLists.txt  ProofStatement.cpp  ProofStatement.hpp  StatementTree.cpp  StatementTree.cpp~  StatementTree.hpp  SubProof.cpp  SubProof.hpp
